[tool.poetry]
name = "trusted-contract-mpngodb-api"
version = "0.1.0"
description = ""
authors = ["Nautilus"]
readme = "README.md"
packages = [
         {include = "common", from = "src"},
         {include = "web_asgi", from = "src"},
         ]

[tool.poetry.dependencies]
python = "^3.10"
motor = "^3.1.1"
fastapi = "^0.95.2"
pydantic = "^1.10.2"
python-dotenv = "^0.21.0"
uvicorn = {extras = ["standard"], version = "^0.20.0"}
gunicorn = "^20.1.0"
odmantic = "^0.9.1"
xrpl-py = "^1.7.0"

[tool.poetry.group.dev.dependencies]
mypy = "^0.991"
black = "^22.10.0"
tox = "^3.27.1"
tox-poetry-installer = {extras = ["poetry"], version = "^0.10.0"}
isort = "^5.10.1"
bandit = "^1.7.4"
rich = "^12.6.0"
devtools = "^0.9.0"
pdoc = "^12.3.0"
flake8 = "^6.0.0"
ruff = "^0.0.166"



[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
